# cfgformalizer

./: Pipfile  README.md  cfgformalizer.py  pyproject.toml
cfgformalizer/: command_line.py  decorators.py  stanza.py  statement.py
cfgformalizer/cisco/: cisco.py  statement.py
examples/: config.txt  group.txt  qos.txt  r1.txt  r2.txt  r3.txt
