[tool.poetry]
name = "cfgformalizer"
version = "0.1.0"
description = "Formalize (show run formal) Cisco IOS, IOS-XR and other type of network configs for easy grepping"
authors = ["xv0x7c0 <13061441+xv0x7c0@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
